# advent-of-code-2022

./: Makefile  README.md  pyproject.toml  requirements_dev.txt
advent_of_code_2022/: day_1.py  template_module.py  template_test.py
docs/source/: conf.py
puzzles/: day_1.md
tests/: day_1_test.py  test_advent_of_code_2022.py
