[tool.poetry]
name = "advent_of_code_2022"
version = "0.1.0"
description = ""
authors = ["Alex Viana <alexcostaviana@gamail.com>"]

[tool.poetry.dependencies]
python = "^3.11.1"

[tool.poetry.dev-dependencies]
black = "^23.1a1"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
