[tool.poetry]
name = "advent_of_code_2022"
version = "0.1.0"
description = ""
authors = ["Alex Viana <alexcostaviana@gamail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1a1"
pytest = "^7.2.0"
pytest-coverage = "^0.0"
ruff = "^0.0.203"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
